--- a/E-commerce-web/src/app/signup/signup.component.scss
+++ b/E-commerce-web/src/app/signup/signup.component.scss
@@ -1,50 +1,6 @@
-.container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+/* Slide in du titre */
+@keyframes slideInDown {
+  from { opacity: 0; transform: translateY(-20px); }
+  to { opacity: 1; transform: translateY(0); }
 }
-
-mat-card{
-    max-width: 500px;
-    width: 100%;
-    padding: 20px;
-
-    @media screen and (max-width : 500px){
-        max-width: 90&;
-    }
-}
-
-max-card-title{
-    text-align: center;
-    font-size: 24px;
-    margin-bottom: 20px;
-}
-
-form{
-    display: flex; 
-    flex-direction: column;
-    align-items: center;
-}
-
-mat-form-field{
-    width: 100%;
-    margin-bottom: 20px;
-}
-
-button{
-    width: 100%;
-}
-
-@media screen and (max-width:500px) {
-    mat-card-title{
-        font-size: 20px;
-    }
-    mat-form-field{
-        margin-bottom: 10px;
-    }
-}
-
-.error-snackbar{
-    background-color: #f44336 !important;
-}
+.animate-slideInDown { animation: slideInDown 0.8s ease forwards; }
